--- a/index.html
+++ b/index.html
@@ -1,274 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Unofficial Crusader Patch</title>
-    <link rel="icon" type="image/ico" href="assets/img/icon6.ico" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-</head>
-
-<body>
-    <div class="container-fluid page">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="index.html"><img src="assets/img/icon6.ico" /></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="getting-started.html">Getting Started</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="features.html">Features</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        AI Character Introduction
-                      </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="aic/overview.html">Overview</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="aic/detailed.html">AI Personality Values</a>
-                            <a class="dropdown-item" href="aic/field-values.html">AIC Field Values</a>
-                        </div>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="aiv.html">AI Castle Introduction</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contributing.html">Contributing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="faq.html">FAQ</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div class="header">
-            <h2 class="text-center">Welcome to the Unofficial Crusader Patch</h2>
-            <h4 class="text-center">Latest Version: UCP 2.15b 
-                    <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"><i class="fab fa-github"></i></a>
-                    <a class="latest-release" href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/releases/tag/v2.15">changelog</a> 
-                    <a class="latest-release" href="https://github.com/UnofficialCrusaderPatch/UnofficialCrusaderPatch/releases/download/v2.15/UnofficialCrusaderPatch_2.15b.zip">download</a>
-                    <a href="https://discord.gg/vmy7CBR"><img src="https://discordapp.com/api/guilds/426318193603117057/widget.png?style=shield"></a>
-                </h4>
-        </div>
-        <hr class="header-divider">
-        <div id="content" class="row">
-            <div class="col-lg-6 feature-highlights">
-                <h3>Feature Highlights</h3>
-                <div id="accordion">
-                    <div class="card feature">
-                        <div class="card-header" id="feature-one" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                            <h5 class="mb-0">
-                              <button class="btn btn-link">
-                                <i class="fas fa-bug"></i>  Improve attack waves
-                              </button>
-                            </h5>
-                        </div>
-
-                        <div id="collapseOne" class="collapse" aria-labelledby="feature-one" data-parent="#accordion">
-                            <div class="card-body feature-highlight">
-                                Lets AI attack units target civil and fortification buildings, as well as wall parts which are already being attacked by one unit. Also lets AI send more troops to attack enemy lord once a breach is detected.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card feature">
-                        <div class="card-header" id="feature-two" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                            <h5 class="mb-0">
-                              <button class="btn btn-link collapsed">
-                                <i class="fas fa-shield-alt"></i>  No AI demolishing of inaccessible buildings
-                              </button>
-                            </h5>
-                        </div>
-                        <div id="collapseTwo" class="collapse" aria-labelledby="feature-two" data-parent="#accordion">
-                            <div class="card-body feature-highlight">
-                                Prevents the AI from demolishing buildings when it has no access. This stops AI from continuously demolishing and rebuilding buildings where it has no access point.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card feature">
-                        <div class="card-header" id="feature-three" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            <h5 class="mb-0">
-                              <button class="btn btn-link collapsed">
-                                <i class="fas fa-shield-alt"></i>  Fix reinforcement of defense troops
-                              </button>
-                            </h5>
-                        </div>
-                        <div id="collapseThree" class="collapse" aria-labelledby="feature-three" data-parent="#accordion">
-                            <div class="card-body feature-highlight">
-                                Fixes bug where AI fails to reinforce missing troops on walls and/or towers when defensive patrols are still active. Probability for AIs to recruit defensive troops is increased (from zero for some AIs).
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card feature">
-                        <div class="card-header" id="feature-four" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                            <h5 class="mb-0">
-                                <button class="btn btn-link collapsed">
-                                    <i class="fas fa-tachometer-alt"></i>  Quicker gate responsiveness
-                                </button>
-                              </h5>
-                        </div>
-                        <div id="collapseFour" class="collapse" aria-labelledby="feature-four" data-parent="#accordion">
-                            <div class="card-body feature-highlight">
-                                Gates close later when enemies in range, and open faster when danger is gone. Enemy distance for gate to close is reduced from 200 to 140. Delay for opening gate when enemy is no longer present is reduced from 1200 to 100.
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card feature">
-                        <div class="card-header" id="feature-list-link">
-                            <h5 class="mb-0">
-                                  <a id="features-link" class="btn btn-link collapsed" href="features.html"><i class="fas fa-list-ul"></i>  View full descriptions of all features</a>
-                              </h5>
-                        </div>
-                    </div>
-                </div>
-
-                <div id="changelog">
-                    <div class="col-lg-11">
-                        <h3>Changelog</h3>
-                        <div class="card-body">
-                            We've made changes and improvements to how some parts of the patcher work internally to make the process <b>more convenient and reliable</b> for you.
-                            We hope this will make it a more enjoyable experience.
-                            Feel free to contribute or suggest ideas on <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch"></i>GitHub</a> or join the <a href="https://discord.gg/vmy7CBR">official UCP discord server</a>
-                        </div>
-                    </div>
-
-                    <div id="change-accordion">
-                        <div class="card feature">
-                            <div class="card-header" id="change-three" data-toggle="collapse" data-target="#changeThree" aria-expanded="true" aria-controls="changeThree">
-                                <h5 class="mb-0">
-                                <button class="btn btn-link"><i class="fas fa-star"></i>
-                                    New Features and Improvements
-                                </button>
-                                </h5>
-                            </div>
-
-                            <div id="changeThree" class="collapse" aria-labelledby="change-three" data-parent="#change-accordion">
-                                <div class="card-body feature-highlight">
-                                    <ul>
-                                        <li>In the new <b>StartTroops</b> tab, you will be able to select a starting unit configuration for all AI Lords as well as your Crusader or European Lord</li>
-                                        <li>In the new <b>StartGoods</b> tab, you will be able to select a starting resource configuration that will apply for yourself and all other human or AI players.</li>
-                                        <li>You are able to now load AIV sets into the patcher by creating a subfolder with the name of your AIV set inside the <code>resources\aiv</code> folder</li>
-                                        <li>If you select multiple AICs that have the same characters defined, the one you select first will be given priority and the other ones will show a warning indicating which AI Character definitions will not be used</li>
-                                        <li>The format of AIC files has changed - the patcher is now using a JSON format with <code>.json</code> file extension</li>
-                                    </ul>
-                                    <a href="assets/doc/changelog.html" target="_blank">View full changelog here</a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="card feature">
-                            <div class="card-header" id="change-one" data-toggle="collapse" data-target="#changeOne" aria-expanded="true" aria-controls="changeOne">
-                                <h5 class="mb-0">
-                                <button class="btn btn-link"><i class="fas fa-random"></i>
-                                    Changes to the Patcher
-                                </button>
-                                </h5>
-                            </div>
-
-                            <div id="changeOne" class="collapse" aria-labelledby="change-one" data-parent="#change-accordion">
-                                <div class="card-body feature-highlight">
-                                    <ul>
-                                        <li>AIC files no longer go into an <code>aic</code> subfolder inside your Stronghold Crusader installation directory</li>
-                                        <li>In this version, the Unofficial Crusader Patch comes with a new folder structure. 
-                                            All content files (including AIC and AIV files) that are to be used/installed by the patcher go into a <code>resources\&lt;config type&gt;</code> subfolder inside the patcher directory. For example your AIC files will go into the <code>resources\aic</code> folder</li>
-                                        <li>AIC files are now in JSON format and with <code>.json</code> file extension. Old AIC files can be converted by the patcher</li>
-                                        <li>AIC and AIV sets bundled with the UCP have been updated to the newest versions</li>
-                                        <li>It is now again possible to select multiple AICs for installation at once</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-
-                        <div class="card feature">
-                            <div class="card-header" id="change-two" data-toggle="collapse" data-target="#changeTwo" aria-expanded="true" aria-controls="changeTwo">
-                                <h5 class="mb-0">
-                                <button class="btn btn-link"><i class="fas fa-users"></i>
-                                    Using the Patcher
-                                </button>
-                                </h5>
-                            </div>
-
-                            <div id="changeTwo" class="collapse" aria-labelledby="change-two" data-parent="#change-accordion">
-                                <div class="card-body feature-highlight">
-                                    <h4>Language support</h4>
-                                    <ul>
-                                        <li>An issue where sharing <code>ucp.cfg</code> (config) files between persons with different locales would cause crashes or otherwise not work properly has been resolved. 
-                                            Please note that any decimal values in the ucp.cfg must now use a dot (.) as the decimal separator to be interpreted correctly</li>
-                                        <li>Translations for Chinese and Hungarian have been added</li>
-                                    </ul>
-                
-                                    <h4>Installation</h4>
-                                    <ul>
-                                        <li>There is now a <b>command line tool</b> that can be used for quicker or custom installation 
-                                            (see <a href="(https://sh0wdown.github.io/UnofficialCrusaderPatch/getting-started.html">installation steps</a> for details)</li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-
-            </div>
-            <div class="col-lg-6">
-                <h3>About the Unofficial Crusader Patch (UCP)</h3>
-                <br> This project is an unofficial patcher for FireFly Studio's game Stronghold Crusader 1. 
-                It features bug-fixes, balancing and quality-of-life changes, as well as several AIV castles. 
-                To apply this patch you need to have Stronghold Crusader installed. 
-                The setup does not include any files created by FireFly Studios, but instead edits them or adds community-made files.
-
-                <br>
-                <br>
-                <h4>Quick Start</h4> 
-                To install the patch download the latest Unofficial Crusader Patch release, copy to your Stronghold Crusader installation, and install. 
-                Detailed instructions are available <a href="getting-started">here</a>. 
-                The patcher selects commonly used settings by default but you may select/deselect features to install as you desire.
-
-                <br>
-                <br>
-                <h4>Multiplayer</h4>
-                Multiplayer works fine with the UCP installed as long as everyone playing has the same options selected.
-                However, having different features enabled, 
-                or specific features such as changing Player 1's color or Activate Spectator Mode will cause crash or desync in multiplayer!
-
-                <br>
-                <br>
-                <h4>Compatibility</h4> 
-                The UnofficialCrusaderPatch should work for most Crusader versions, but the latest <a href="http://www.strongholdcrusaderhd.com/game.html">1.41 HD version</a> is recommended. 
-                If your version is not supported, which can happen if you install it from a CD for example, you should receive errors during the installation. 
-                To avoid this you can install FireFly's Crusader HD patch for free, which should support all of the unofficial changes.
-
-                <br>
-                <br>
-                <h4>Suggestions and Contributing</h4> 
-                If you have suggestions, you are welcome to post new ideas or discuss already existing ones in the issues section on <a href="https://github.com/Sh0wdown/UnofficialCrusaderPatch/issues">GitHub</a>. 
-                The following guidelines apply:
-                <ul>
-                    <li>First check if your suggestion already has a topic and join that discussion instead of creating a new one</li>
-                    <li>Please post one idea per issue to keep it clear and easier to address</li>
-                    <li>Keep the tone nice and civil</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</body>
-
-<link rel="stylesheet" href="assets/css/index.css">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
-</html>
+<meta charset="utf-8">
+<title>Redirecting to https://UnofficialCrusaderPatch.github.io/</title>
+<meta http-equiv="refresh" content="0; URL=https://UnofficialCrusaderPatch.github.io/">
+<link rel="canonical" href="https://UnofficialCrusaderPatch.github.io/">
